fixed the text and rectangle height alignment

--- a/Css/dash.css
+++ b/Css/dash.css
@@ -4,7 +4,7 @@
 
 .upperdashboard {
     display: flex;
-    height: 85vh;
+    height: fit-content;
     width: 100%;
     padding: 10px 0px;
 }
